--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,20 +6,22 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".modelo.config.AplicacionORM"
         android:allowBackup="true"
         android:icon="@drawable/wolf"
         android:label="Casv II"
         android:roundIcon="@drawable/wolf"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.progra.vistas.actividades.ActividadArchivo" />
-        <activity android:name="com.example.progra.vistas.actividades.ActividadProductoHelper" />
-        <activity android:name="com.example.progra.vistas.actividades.ActividadArchivosSD" />
-        <activity android:name="com.example.progra.vistas.actividades.ActividadMemoriaPrograma2" />
-        <activity android:name="com.example.progra.vistas.actividades.ActividadMemoriaPrograma" />
-        <activity android:name="com.example.progra.vistas.actividades.ActividadMemoriaInterna" />
+        <activity android:name=".vistas.actividades.ActividadCarroORM"></activity>
+        <activity android:name=".vistas.actividades.ActividadArchivo" />
+        <activity android:name=".vistas.actividades.ActividadProductoHelper" />
+        <activity android:name=".vistas.actividades.ActividadArchivosSD" />
+        <activity android:name=".vistas.actividades.ActividadMemoriaPrograma2" />
+        <activity android:name=".vistas.actividades.ActividadMemoriaPrograma" />
+        <activity android:name=".vistas.actividades.ActividadMemoriaInterna" />
         <activity
-            android:name="com.example.progra.menu_nav"
+            android:name=".menu_nav"
             android:label="Casv II"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -28,14 +30,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.progra.vistas.actividades.ActividadRecyclerArtistas" />
-        <activity android:name="com.example.progra.vistas.actividades.ActividadEscucharFragmento" />
-        <activity android:name="com.example.progra.vistas.actividades.ActividadFragmento" />
-        <activity android:name="com.example.progra.vistas.actividades.ActividadRecibirParametros" />
-        <activity android:name="com.example.progra.vistas.actividades.ActividadEnviarParametros" />
-        <activity android:name="com.example.progra.vistas.actividades.ActivitySuma" />
-        <activity android:name="com.example.progra.vistas.actividades.ActivityLogin" />
-        <activity android:name="com.example.progra.MainActivity" />
+        <activity android:name=".vistas.actividades.ActividadRecyclerArtistas" />
+        <activity android:name=".vistas.actividades.ActividadEscucharFragmento" />
+        <activity android:name=".vistas.actividades.ActividadFragmento" />
+        <activity android:name=".vistas.actividades.ActividadRecibirParametros" />
+        <activity android:name=".vistas.actividades.ActividadEnviarParametros" />
+        <activity android:name=".vistas.actividades.ActivitySuma" />
+        <activity android:name=".vistas.actividades.ActivityLogin" />
+        <activity android:name=".MainActivity" />
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="movil5a"/>
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1"/>
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="com.example.progra.modelo.Carro"/>
+        <provider
+            android:name="com.activeandroid.content.ContentProvider"
+            android:authorities="com.example.progra"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
 
 </manifest>
