--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.progra">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,7 +20,23 @@
         android:roundIcon="@drawable/wolf"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".vistas.actividades.ActividadVollyUsuario"></activity>
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".vistas.actividades.ActividadMapas"
+            android:label="@string/title_activity_actividad_mapas"></activity>
+        <activity android:name=".vistas.actividades.ActividadVollyUsuario" />
         <activity android:name=".vistas.actividades.ActividadHiloUsuario" />
         <activity android:name=".vistas.actividades.ActividadSWVolly" />
         <activity android:name=".vistas.actividades.ActividadSWClima" />
@@ -54,6 +76,10 @@
         <meta-data
             android:name="AA_MODELS"
             android:value="com.example.progra.modelo.Carro" />
+
+        <meta-data
+            android:name="com.google.android.geo.API.KEY"
+            android:value="AIzaSyCTLzjs9YcQKhEw2KIYEmZJrJGVGCMeQVc"/>
 
         <provider
             android:name="com.activeandroid.content.ContentProvider"
