--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.progra">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -20,7 +19,9 @@
         android:roundIcon="@drawable/wolf"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".vistas.actividades.ActividadSensorLuz"></activity>
+        <activity android:name=".vistas.actividades.ActividadSensorProximidad" />
+        <activity android:name=".vistas.actividades.ActividadSensorAcelerometro" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -35,7 +36,7 @@
 
         <activity
             android:name=".vistas.actividades.ActividadMapas"
-            android:label="@string/title_activity_actividad_mapas"></activity>
+            android:label="@string/title_activity_actividad_mapas" />
         <activity android:name=".vistas.actividades.ActividadVollyUsuario" />
         <activity android:name=".vistas.actividades.ActividadHiloUsuario" />
         <activity android:name=".vistas.actividades.ActividadSWVolly" />
@@ -76,10 +77,9 @@
         <meta-data
             android:name="AA_MODELS"
             android:value="com.example.progra.modelo.Carro" />
-
         <meta-data
             android:name="com.google.android.geo.API.KEY"
-            android:value="AIzaSyCTLzjs9YcQKhEw2KIYEmZJrJGVGCMeQVc"/>
+            android:value="AIzaSyCTLzjs9YcQKhEw2KIYEmZJrJGVGCMeQVc" />
 
         <provider
             android:name="com.activeandroid.content.ContentProvider"
